# CTG_MCP_SERVER

./: .gitignore  README.md  llm_test.py  pyproject.toml  requirements.txt  server.py  test.py  working_server.py
src/config/: api_config.py
