[project]
name = "ctg-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "fastmcp>=2.11.3",
    "httpx>=0.28.1",
    "langchain-mcp-adapters>=0.1.9",
    "mcp>=1.13.0",
    "openai>=1.99.9",
    "openai-agents>=0.2.9",
    "python-dotenv>=1.1.1",
    "pytrials>=1.0.0",
]
